src/css/app.css
/* Your app styles here */
.navbar-inner {
  background: #E64040;
}
i.icon {
  color: #fdfd7c;
}
.title {
  color: #fff;
}
.block {
  margin: 10px 0 !important;
}

.swiper-pagination-bullet-active {
  background: #E64040 !important;
}
.swiper-pagination-bullet {
  background: #fff;
}
.swiper-pagination-bullet {
  opacity: 1;
}
p.trailer-title {
  margin: 0.2em 20px 1em;
  text-overflow: ellipsis;
  overflow: hidden;
  width: 70px;
  height: 1.2em;
  white-space: nowrap;
}
.searchbar-disable-button {
  color: #E64040;
}

/* Styling to make Tabs appear always at bottom of the screen*/
.tabs-bottom {
  bottom: 0 !important;
  top: unset !important;
}
.md .toolbar:not(.toolbar-bottom-md):not(.messagebar) ~ * .page-content, .md .toolbar:not(.toolbar-bottom-md):not(.messagebar) ~ .page-content{
  padding-top: 0;
}

.tabs-bottom, .md .toolbar {
  background-color: #e4e4e4;
}
.toolbar-inner .link {
  background-repeat: no-repeat;
  background-position-y: bottom;
  background-color: #e4e4e4;
}

.tab-1 {
  background-image: url('../images/cit08-image_view-topcharts-normal-background.png');
}

.tab-2 {
  background-image: url('../images/cit08-image_view-calendar-normal-background.png');
}

.tab-3 {
  background-image: url('../images/cit08-image_view-featured-normal-background.png');
}

.tab-4 {
  background-image: url('../images/cit08-image_view-intheaters-normal-background.png');
}

.tab-5 {
  background-image: url('../images/cit08-image_view-favorites-normal-background.png');
}

.tab-link-active.tab-1 {
  background-image: url('../images/cit08-image_view-topcharts-hover-background.png');
}

.tab-link-active.tab-2 {
  background-image: url('../images/cit08-image_view-calendar-hover-background.png');
}

.tab-link-active.tab-3 {
  background-image: url('../images/cit08-image_view-featured-hover-background.png');
}

.tab-link-active.tab-4 {
  background-image: url('../images/cit08-image_view-intheaters-hover-background.png');
}

.tab-link-active.tab-5 {
  background-image: url('../images/cit08-image_view-favorites-hover-background.png');
}

.tabbar a.tab-link, .tabbar a.link {
  width: 20%;
}

